--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors Game</title>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+
+    <div class="main-container">
     <h1>Rock, Paper, Scissors</h1>
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
+
+    <div class="button-container">
+    <button id="rock"><img src="images/rock.png"></button>
+    <button id="paper"><img src="images/paper.png"></button>
+    <button id="scissors"><img src="images/scissors.png"></button>
+    </div>
     <div id="results"></div>
     <div id="score"></div>
+    </div>
 
 </body>
 
-<script src="game.js"></script>
-
+<script src="app.js"></script>
 </html>
