--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <h1>Rock, Paper, Scissors</h1>
 
     <div class="button-container">
-    <button id="rock"><img src="images/rock.png"></button>
-    <button id="paper"><img src="images/paper.png"></button>
-    <button id="scissors"><img src="images/scissors.png"></button>
+        <button id="rock" class="game-button"><img src="images/rock.png"></button>
+        <button id="paper" class="game-button"><img src="images/paper.png"></button>
+        <button id="scissors" class="game-button"><img src="images/scissors.png"></button>
     </div>
+    <button id="refresh-button">Reset</button> <!-- Add the refresh button -->
     <div id="results"></div>
     <div id="score"></div>
+    
     </div>
+
 </body>
 
 <script src="app.js"></script>
